# CJBot

./: .gitignore  README.md  config.py  main.py  models.py  pyproject.toml  requirements.txt  sync.py  utils.py
bot/: __init__.py  autobin.py  forge.py  help.py  mappings.py  page.py  reactionroles.py  settings.py
bot/mappings/: __init__.py  downloader.py
sync/: __init__.py
utils/: __init__.py  json.py
website/: __init__.py
website/templates/: home.html
website/views/: __init__.py  api.py  home.py
