[tool.poetry]
name = "cjbot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^2.4.3"
python-dotenv = "^0.13.0"
requests = "^2.24.0"
bs4 = "^0.0.1"
aioschedule = "^0.5.2"
pbwrap = "^1.2.2"
bidict = "^0.19.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
"discord.py" = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
